# docs/swagger.yaml
@@ -1,4 +1,13 @@
 definitions:
+  book.Book:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+      price:
+        type: integer
+    type: object
   controllers.ResponseHTTP:
     properties:
       data: {}
@@ -26,7 +35,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get all books
+      description: Get all book
       produces:
       - application/json
       responses:
@@ -42,7 +51,34 @@ paths:
       - ApiKeyAuth: []
       summary: Get all
       tags:
-      - books
+      - book
+    post:
+      consumes:
+      - application/json
+      description: Create new book
+      parameters:
+      - description: 1, Some-Book, 200
+        in: body
+        name: book
+        required: true
+        schema:
+          $ref: '#/definitions/book.Book'
+      produces:
+      - application/json
+      responses:
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/controllers.ResponseHTTP'
+        "503":
+          description: Service Unavailable
+          schema:
+            $ref: '#/definitions/controllers.ResponseHTTP'
+      security:
+      - ApiKeyAuth: []
+      summary: Book's creation
+      tags:
+      - book
   /api/books/{id}:
     get:
       consumes:
@@ -69,7 +105,7 @@ paths:
       - ApiKeyAuth: []
       summary: Get book by ID
       tags:
-      - books
+      - book
   /auth/sign-in:
     post:
       consumes:
